<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.guillaume.starwrobs.widget.DetailCardLayout
        android:id="@+id/cardDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_major"
        app:title="@string/ui_details_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/spacing_major"
            android:paddingLeft="@dimen/spacing_major"
            android:paddingRight="@dimen/spacing_major">

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_starships_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_starships_name" />

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_starships_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_starships_model" />

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_starships_manufacturer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_starships_manufacturer" />

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_starships_cost_in_credits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_starships_cost_in_credits" />

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_starships_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_starships_length" />

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_starships_max_atmosphering_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_starships_max_atmosphering_speed" />

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_starships_crew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_starships_crew" />

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_starships_passengers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_starships_passengers" />

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_starships_cargo_capacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_starships_cargo_capacity" />

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_starships_consumables"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_starships_consumables" />

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_starships_hyperdrive_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_starships_hyperdrive_rating" />

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_starships_MGLT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_starships_MGLT" />

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_starships_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_starships_class" />

        </LinearLayout>

    </com.guillaume.starwrobs.widget.DetailCardLayout>

    <com.guillaume.starwrobs.widget.DetailCardLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_major"
        app:title="@string/ui_card_pilots">

        <LinearLayout
            android:id="@+id/cardPilots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/spacing_major"
            android:paddingLeft="@dimen/spacing_major"
            android:paddingRight="@dimen/spacing_major" />

    </com.guillaume.starwrobs.widget.DetailCardLayout>

    <com.guillaume.starwrobs.widget.DetailCardLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_major"
        app:title="@string/ui_tab_films">

        <LinearLayout
            android:id="@+id/cardFilms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/spacing_major"
            android:paddingLeft="@dimen/spacing_major"
            android:paddingRight="@dimen/spacing_major" />

    </com.guillaume.starwrobs.widget.DetailCardLayout>

</LinearLayout>