<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.guillaume.starwrobs.widget.DetailCardLayout
        android:id="@+id/cardDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_major"
        app:title="@string/ui_details_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/spacing_major"
            android:paddingLeft="@dimen/spacing_major"
            android:paddingRight="@dimen/spacing_major">

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_planets_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_planets_name" />

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_planets_rotation_period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_planets_rotation_period" />

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_planets_orbital_period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_planets_orbital_period" />

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_planets_diameter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_planets_diameter" />

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_planets_climate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_planets_climate" />

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_planets_gravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_planets_gravity" />

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_planets_terrain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_planets_terrain" />

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_planets_surface_water"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_planets_surface_water" />

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_planets_population"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_planets_population" />

        </LinearLayout>

    </com.guillaume.starwrobs.widget.DetailCardLayout>

    <com.guillaume.starwrobs.widget.DetailCardLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_major"
        app:title="@string/ui_card_residents">

        <LinearLayout
            android:id="@+id/cardResidents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/spacing_major"
            android:paddingLeft="@dimen/spacing_major"
            android:paddingRight="@dimen/spacing_major" />

    </com.guillaume.starwrobs.widget.DetailCardLayout>

    <com.guillaume.starwrobs.widget.DetailCardLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_major"
        app:title="@string/ui_tab_films">

        <LinearLayout
            android:id="@+id/cardFilms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/spacing_major"
            android:paddingLeft="@dimen/spacing_major"
            android:paddingRight="@dimen/spacing_major" />

    </com.guillaume.starwrobs.widget.DetailCardLayout>

</LinearLayout>